--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,7 +9,13 @@
 <ul>
   <li>
     <h2>
-      <a target="_blank" rel="noopener" (click)="image('image_upload')">Image Upload</a>
+      <a (click)="image('image_upload')">Image Upload</a>
     </h2>
   </li>
+
+  <li>
+      <h2>
+        <a (click)="image('google')">Google</a>
+      </h2>
+    </li>
 </ul>
